# Scrape-DexSolana

./: V2_scrape_kittgt2_old.py  get_cookes.py  pyproject.toml  scraped_links.csv
LowScrapers/: 1 Scraping.py  2 FULLBeautifulclaimchecker.py  2 FULLBeautifulclaimcheckerV2.py  2 FULLBeautifulclaimcheckerV3.py  333FULLBeautifulclaimcheckerV4.py  new2 FULLBeautifulclaimcheckerV3.py  test_1.py  work_1_day_ago.py
data/: scraped_links.csv  scraped_links2.csv  scraped_links3.csv  scraped_links4.csv  scraped_links5.csv
niceScrapers/: V3newscrape_kittgtv4.py  scrapyV1.py
